--- a/Aayojakah/Views/Admin/Dashboard.cshtml
+++ b/Aayojakah/Views/Admin/Dashboard.cshtml
@@ -1,3 +1,295 @@
 ﻿@{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
+<head>
+    <!-- Css -->
+    <link rel="stylesheet" href="~/dist/styles.css">
+    <link rel="stylesheet" href="~/dist/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i" rel="stylesheet">
+    <style>
+        .flex-col {
+            margin-bottom: 20px;
+        }
+
+        .shadow-lg {
+            height: 130px;
+        }
+
+        .no-underline {
+            padding-bottom: 12px;
+            font-size: medium;
+            text-shadow: 1px 1px 2px black;
+        }
+        #datatablesSimple tr{
+            height:30px;
+        }
+        #datatablesSimple td,th {
+            font-size:20px;
+        }
+        label,.dataTable-info {
+            font-size:15px;
+        }
+        .dataTable-pagination {
+           height:10px;
+           width:30px;
+           margin-right:30px;
+        }
+    </style>
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" />
+    <link href="~/css/styles.css" rel="stylesheet" />
+    <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
+    </head>
+
+    <!--Main-->
+<main class="bg-white-300 flex-1 p-3 overflow-hidden">
+
+    <div class="flex flex-col">
+        <!-- Stats Row Starts Here -->
+        <div class="flex flex-1 flex-col md:flex-row lg:flex-row mx-2">
+            <div class="shadow-lg bg-red-vibrant border-l-8 hover:bg-red-vibrant-dark border-red-vibrant-dark mb-2 p-2 md:w-1/4 mx-2">
+                <div class="p-4 flex flex-col">
+                    <a href="#" class="no-underline text-white text-2xl">
+                        1439
+                    </a>
+                    <a href="#" class="no-underline text-white text-lg">
+                        Total Events
+                    </a>
+                </div>
+            </div>
+
+            <div class="shadow bg-info border-l-8 hover:bg-info-dark border-info-dark mb-2 p-2 md:w-1/4 mx-2">
+                <div class="p-4 flex flex-col">
+                    <a href="#" class="no-underline text-white text-2xl">
+                        500
+                    </a>
+                    <a href="#" class="no-underline text-white text-lg">
+                        Total Team Members
+                    </a>
+                </div>
+            </div>
+
+            <div class="shadow bg-warning border-l-8 hover:bg-warning-dark border-warning-dark mb-2 p-2 md:w-1/4 mx-2">
+                <div class="p-4 flex flex-col">
+                    <a href="#" class="no-underline text-white text-2xl">
+                        956
+                    </a>
+                    <a href="#" class="no-underline text-white text-lg">
+                        Total Users
+                    </a>
+                </div>
+            </div>
+
+            <div class="shadow bg-success border-l-8 hover:bg-success-dark border-success-dark mb-2 p-2 md:w-1/4 mx-2">
+                <div class="p-4 flex flex-col">
+                    <a href="#" class="no-underline text-white text-2xl">
+                        16
+                    </a>
+                    <a href="#" class="no-underline text-white text-lg">
+                        Reamaining Booked Events
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid px-4">
+        <div class="card mb-4">
+            <div class="card-header">
+                <i class="fas fa-table me-1"></i>
+                <h3>Booked Services</h3>
+            </div>
+            <div class="card-body">
+                <table id="datatablesSimple">
+                    <thead>
+                        <tr>
+                            <th>Service Name</th>
+                            <th>Booking Id</th>
+                            <th>Cost</th>
+                            <th>Equipment cost</th>
+                            <th>Booking date</th>
+                            <th>Event</th>
+                        </tr>
+                    </thead>
+                    <tfoot>
+                        <tr>
+                            <th>Service Name</th>
+                            <th>Booking Id</th>
+                            <th>Total sCost</th>
+                            <th>Equipment cost</th>
+                            <th>Booking date</th>
+                            <th>Event</th>
+                        </tr>
+                    </tfoot>
+                    <tbody>
+                        <tr>
+                            <td>Rajawada Hotel</td>
+                            <td>25</td>
+                            <td>50000</td>
+                            <td>15000</td>
+                            <td>11-07-2022</td>
+                            <td>Engagement</td>
+                        </tr>
+                        <tr>
+                            <td>Venus Hotel</td>
+                            <td>21</td>
+                            <td>13000</td>
+                            <td>15000</td>
+                            <td>30-06-2022</td>
+                            <td>Birthday</td>
+                        </tr>
+                        <tr>
+                            <td>Orchids Flowers</td>
+                            <td>30</td>
+                            <td>200000</td>
+                            <td>5000</td>
+                            <td>2-07-2022</td>
+                            <td>Wedding</td>
+                        </tr>
+                        <tr>
+                            <td>LED Outlights</td>
+                            <td>30</td>
+                            <td>200000</td>
+                            <td>10000</td>
+                            <td>2-07-2022</td>
+                            <td>Wedding</td>
+                        </tr>
+                        <tr>
+                            <td>Food</td>
+                            <td>30</td>
+                            <td>200000</td>
+                            <td>40000</td>
+                            <td>2-07-2022</td>
+                            <td>Wedding</td>
+                        </tr>
+                        <tr>
+                            <td>Orchestra</td>
+                            <td>24</td>
+                            <td>20000</td>
+                            <td>2000</td>
+                            <td>4-07-2022</td>
+                            <td>Family Function</td>
+                        </tr>
+                        <tr>
+                            <td>Lights</td>
+                            <td>22</td>
+                            <td>30000</td>
+                            <td>15000</td>
+                            <td>31-07-2022</td>
+                            <td>College Fest</td>
+                        </tr>
+                        <tr>
+                            <td>Food</td>
+                            <td>22</td>
+                            <td>30000</td>
+                            <td>50000</td>
+                            <td>31-07-2022</td>
+                            <td>College Fest</td>
+                        </tr>
+                        <tr>
+                            <td>Music</td>
+                            <td>22</td>
+                            <td>30000</td>
+                            <td>5000</td>
+                            <td>31-07-2022</td>
+                            <td>College Fest</td>
+                        </tr>
+                        <tr>
+                            <td>Param Hotels</td>
+                            <td>27</td>
+                            <td>30000</td>
+                            <td>2000</td>
+                            <td>16-08-2022</td>
+                            <td>Farewell</td>
+                        </tr>
+                        <tr>
+                            <td>food</td>
+                            <td>27</td>
+                            <td>30000</td>
+                            <td>25000</td>
+                            <td>16-08-2022</td>
+                            <td>Farewell</td>
+                        </tr>
+                        <tr>
+                            <td>Decorations</td>
+                            <td>27</td>
+                            <td>30000</td>
+                            <td>3000</td>
+                            <td>16-08-2022</td>
+                            <td>Farewell</td>
+                        </tr>
+                        <tr>
+                            <td>Hotel Regent</td>
+                            <td>31</td>
+                            <td>20000</td>
+                            <td>2000</td>
+                            <td>4-08-2022</td>
+                            <td>Corporate Event</td>
+                        </tr>
+                        <tr>
+                            <td>Food</td>
+                            <td>31</td>
+                            <td>20000</td>
+                            <td>15000</td>
+                            <td>4-08-2022</td>
+                            <td>Corporate Event</td>
+                        </tr>
+                        <tr>
+                            <td>Food</td>
+                            <td>20</td>
+                            <td>20000</td>
+                            <td>20000</td>
+                            <td>29-06-2022</td>
+                            <td>Birthday</td>
+                        </tr>
+                        <tr>
+                            <td>Param Hotels</td>
+                            <td>26</td>
+                            <td>40000</td>
+                            <td>2000</td>
+                            <td>25-07-2022</td>
+                            <td>Family Function</td>
+                        </tr>
+                        <tr>
+                            <td>Food</td>
+                            <td>26</td>
+                            <td>40000</td>
+                            <td>30000</td>
+                            <td>25-07-2022</td>
+                            <td>Family Function</td>
+                        </tr>
+                        <tr>
+                            <td>Decoration</td>
+                            <td>26</td>
+                            <td>40000</td>
+                            <td>6000</td>
+                            <td>25-07-2022</td>
+                            <td>Family Function</td>
+                        </tr>
+                        <tr>
+                            <td>Music</td>
+                            <td>28</td>
+                            <td>3000</td>
+                            <td>3000</td>
+                            <td>19-07-2022</td>
+                            <td>Farewell</td>
+                        </tr>
+                        <tr>
+                            <td>Marriott Hotel</td>
+                            <td>33</td>
+                            <td>500000</td>
+                            <td>50000</td>
+                            <td>23-08-2022</td>
+                            <td>Wedding</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</main>
+
+    <script src="~/dist/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="~/Admindash/js/scripts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
+    <script src="~/Admindash/js/datatables-simple-demo.js"></script>
