--- a/Aayojakah/Views/Shared/_LayoutCustomer.cshtml
+++ b/Aayojakah/Views/Shared/_LayoutCustomer.cshtml
@@ -4,41 +4,44 @@
 <html>
 <head>
     <link rel="shortcut icon" href="~/ProjectLogo (1).png">
-    <style>
-        .container {
-            min-height:calc(100vh-200px-40px);
-        }
-        footer {
-            background-color: #1C4E80;
-            font-family: Raleway;
-            color: antiquewhite;
-            padding-left: 13%;
-            padding-right: 15%;
-            position: fixed;
-            bottom: 0;
-            height: 40px;
-            left: 0;
-            width: 100%;
-            font-weight: 700;
-            padding-top: 10px;
-        }
-
-        #copyright {
-            color: antiquewhite;
-            text-align: right;
-            float: right;
-        }
-
-        #developer {
-            color: antiquewhite;
-            text-align: left;
-        }
-    </style>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] Dashboard - @Context.Session.GetString("Username") </title>
 
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>@ViewData["Title"] Dashboard - @Context.Session.GetString("Username") </title>
 
+    <title>Team</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    <link href="~/ProjectLogo (1).png" rel="icon">
+    <link href="~/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+    <!-- Vendor CSS Files -->
+    <link href="~/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="~/assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="~/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="~/assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+
+    <!-- Template Main CSS File -->
+    <link href="~/assets/css/main.css" rel="stylesheet">
+
+    <!-- =======================================================
+    * Template Name: Nova - v1.0.0
+    * Template URL: https://bootstrapmade.com/nova-bootstrap-business-template/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -55,12 +58,12 @@
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
     </environment>
 
-    <environment names="Staging,Production">
+    @*<environment names="Staging,Production">
         <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
-    </environment>
+    </environment>*@
 
     @*<link href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css" rel="stylesheet" />
         <link href="https://cdn.datatables.net/responsive/2.1.1/css/responsive.bootstrap.min.css" rel="stylesheet" />
@@ -84,39 +87,127 @@
 
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
-<body style="background-color: #DADADA">
-    <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:#1C4E80">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Customer" asp-action="Dashboard" class="navbar-brand">Dashboard</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+
+<body class="page-team">
+
+    <!-- ======= Header ======= -->
+    <header id="header" class="header d-flex align-items-center fixed-top" style="background-color: rgba(27, 47, 69, 0.9);  max-height:100px; padding-bottom:20px;">
+        <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+
+            <a asp-controller="Customer" asp-action="Dashboard" class="logo d-flex align-items-center">
+                <!-- Uncomment the line below if you also wish to use an image logo -->
+                <!-- <img src="~/assets/img/logo.png" alt=""> -->
+                <h1 class="d-flex align-items-center" style="font-family:'Baskerville Old Face'; padding-bottom:30px; padding-top:15px;">Dashboard</h1>
+            </a>
+
+            <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
+            <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
+
+            <nav id="navbar" class="navbar">
+                <ul>
                     <li><a asp-area="" asp-controller="Booking" asp-action="BookingVenue">Book Event</a></li>
                     <li><a asp-area="" asp-controller="ShowAllBooking" asp-action="AllBookings">Booking Status</a></li>
-                    @*<li><a asp-area="" asp-controller="UserProfile" asp-action="Profile">Profile</a></li>*@
-                    @*<li><a asp-area="" asp-controller="Customer" asp-action="ChangePassword">ChangePassword</a></li>*@
                     <li style="margin-left:600px"> <a asp-area="" asp-controller="UserProfile" asp-action="Profile" class="table-hover">Hi @Context.Session.GetString("Username") !</a> </li>
-                    
-                    <li><a asp-area="" asp-controller="Login" asp-action="Logout">LogOut</a></li> 
-               </ul>
+
+                    <li><a asp-area="" asp-controller="Login" asp-action="Logout">LogOut</a></li>
+                </ul>
+            </nav><!-- .navbar -->
+
+        </div>
+    </header><!-- End Header -->
+    <div style="margin-top:40px" ;>
+
+    </div>
+    @RenderBody()
+
+    <footer id="footer" class="footer" style="margin-top:30px;">
+
+        <div class="footer-content">
+            <div class="container">
+                <div class="row gy-4">
+                    <div class="col-lg-5 col-md-12 footer-info">
+                        <a href="index.html" class="logo d-flex align-items-center">
+                            <span>Aayojaka: ~ The Organizers</span>
+                        </a>
+                        <p>
+                            <br />
+                            Ayojakaha is a bright, colorful & stylish Event Planning website with a festive and elegant design.
+                            It is made to organize Professional as well as Functional events.
+
+                        </p>
+                        <div class="social-links d-flex  mt-3">
+                            <a href="https://twitter.com/" class="twitter"><i class="bi bi-twitter"></i></a>
+                            <a href="https://www.facebook.com/" class="facebook"><i class="bi bi-facebook"></i></a>
+                            <a href="https://www.instagram.com/" class="instagram"><i class="bi bi-instagram"></i></a>
+                            <a href="https://www.linkedin.com/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2 col-6 footer-links">
+                        <h4>Useful Links</h4>
+                        <ul>
+                            <li><i class="bi bi-dash"></i> <a href="#">Home</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">About us</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Services</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Portfolio</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Team</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Contact us</a></li>
+
+
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-2 col-6 footer-links">
+                        <h4>Our Services</h4>
+                        <ul>
+                            <li><i class="bi bi-dash"></i> <a href="#">Wedding Ceremony </a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Birthday Celebration </a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Family Function</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Farewell Party</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">College Fest</a></li>
+                            <li><i class="bi bi-dash"></i> <a href="#">Corporate Events</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
+                        <h4>Contact Us</h4>
+                        <p>
+                            Plot No 26, Rajiv Gandhi Infotech Park, <br>
+                            Hinjawadi, Pune - 411057.<br>
+                            India <br><br>
+                            <strong>Phone:</strong> +1 5589 55488 55<br>
+                            <strong>Email:</strong> www.cognizant.com<br>
+                        </p>
+
+                    </div>
+
+                </div>
             </div>
         </div>
-    </nav>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        
-    </div>
+
+        <div class="footer-legal">
+            <div class="container">
+                <div class="copyright">
+                    &copy; Copyright <strong><span>Aayojakah</span></strong>. All Rights Reserved
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
+    <!-- Vendor JS Files -->
+    <script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/assets/vendor/aos/aos.js"></script>
+    <script src="~/assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="~/assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="~/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="~/assets/vendor/php-email-form/validate.js"></script>
+
+    <!-- Template Main JS File -->
+    <script src="~/assets/js/main.js"></script>
 
     <environment names="Development">
-        
+
         <script src="~/js/site.js" asp-append-version="true"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="~/js/my-slider-1.0.0.js"></script>
@@ -146,10 +237,6 @@
     <link href="~/lib/dataTablesScripts/responsive.bootstrap.min.css" rel="stylesheet" />
     <script src="~/lib/dataTablesScripts/jquery.dataTables.min.js"></script>
     <script src="~/lib/dataTablesScripts/dataTables.bootstrap4.min.js"></script>
-</body>
-<footer>
-    <a id="developer">Developed by -  </a>
-    <a id="copyright">Copyright © 2022 . All rights reserved.</a>
 
-</footer>
+</body>
 </html>
