--- a/Aayojakah/Views/SuperAdmin/Dashboard.cshtml
+++ b/Aayojakah/Views/SuperAdmin/Dashboard.cshtml
@@ -1,3 +1,302 @@
 ﻿@{
     Layout = "~/Views/Shared/_SuperAdminLayout.cshtml";
 }
+
+<head>
+    <!-- Css -->
+    <link rel="stylesheet" href="~/dist/styles.css">
+    <link rel="stylesheet" href="~/dist/all.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i" rel="stylesheet">
+    <style>
+        .flex-col{
+            margin-bottom:20px;
+        }
+
+        .shadow-lg{
+            height:130px;
+        }
+
+        .no-underline {
+            padding-bottom: 12px;
+            font-size: medium;
+            text-shadow: 1px 1px 2px black;
+        }
+        
+    </style>
+</head>
+
+<!--Main-->
+<main class="bg-white-300 flex-1 p-3 overflow-hidden">
+
+    <div class="flex flex-col">
+        <!-- Stats Row Starts Here -->
+        <div class="flex flex-1 flex-col md:flex-row lg:flex-row mx-2">
+            <div class="shadow-lg bg-red-vibrant border-l-8 hover:bg-red-vibrant-dark border-red-vibrant-dark mb-2 p-2 md:w-1/4 mx-2">
+                <div class="p-4 flex flex-col">
+                    <a href="#" class="no-underline text-white text-2xl">
+                        1439
+                    </a>
+                    <a href="#" class="no-underline text-white text-lg">
+                        Total Events
+                    </a>
+                </div>
+            </div>
+
+            <div class="shadow bg-info border-l-8 hover:bg-info-dark border-info-dark mb-2 p-2 md:w-1/4 mx-2">
+                <div class="p-4 flex flex-col">
+                    <a href="#" class="no-underline text-white text-2xl">
+                        231
+                    </a>
+                    <a href="#" class="no-underline text-white text-lg">
+                        Total Vendors
+                    </a>
+                </div>
+            </div>
+
+            <div class="shadow bg-warning border-l-8 hover:bg-warning-dark border-warning-dark mb-2 p-2 md:w-1/4 mx-2">
+                <div class="p-4 flex flex-col">
+                    <a href="#" class="no-underline text-white text-2xl">
+                        956
+                    </a>
+                    <a href="#" class="no-underline text-white text-lg">
+                        Total Users
+                    </a>
+                </div>
+            </div>
+
+            <div class="shadow bg-success border-l-8 hover:bg-success-dark border-success-dark mb-2 p-2 md:w-1/4 mx-2">
+                <div class="p-4 flex flex-col">
+                    <a href="#" class="no-underline text-white text-2xl">
+                        16
+                    </a>
+                    <a href="#" class="no-underline text-white text-lg">
+                        Reamaining Booked Events
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- /Stats Row Ends Here -->
+        <!-- Card Sextion Starts Here -->
+        <div class="flex flex-1 flex-col md:flex-row lg:flex-row mx-2">
+
+            <!-- card -->
+
+            <div class="rounded overflow-hidden shadow bg-white mx-2 w-full">
+                <div class="px-6 py-2 border-b border-light-grey">
+                    <div class="font-bold text-2xl">Trending Services</div>
+                </div>
+                <div class="table-responsive">
+                    <table class="table text-grey-darkest">
+                        <thead class="bg-grey-dark text-white text-normal">
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col"><a asp-controller="Home" asp-action="Services">Services</a></th>
+                                <th scope="col">Last</th>
+                                <th scope="col">Current</th>
+                                <th scope="col">Change</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>
+                                    <button class="bg-blue-500 hover:bg-blue-800 text-white font-light py-1 px-2 rounded-full">
+                                        Wedding
+                                    </button>
+                                </td>
+                                <td>33</td>
+                                <td>35</td>
+                                <td>
+                                    <span class="text-green-500"><i class="fas fa-arrow-up"></i>5%</span>
+                                </td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>
+                                    <button class="bg-blue-500 hover:bg-blue-800 text-white font-light py-1 px-2 rounded-full">
+                                        College Fests
+                                    </button>
+                                </td>
+                                <td>10</td>
+                                <td>6</td>
+                                <td>
+                                    <span class="text-red-500"><i class="fas fa-arrow-down"></i>40%</span>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row">3</th>
+                                <td>
+                                    <button class="bg-blue-500 hover:bg-blue-800 text-white font-light py-1 px-2 rounded-full">
+                                        Birthdays
+                                    </button>
+                                </td>
+                                <td>24</td>
+                                <td>15</td>
+                                <td>
+                                    <span class="text-red-500"><i class="fas fa-arrow-down"></i>25%</span>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row">4</th>
+                                <td>
+                                    <button class="bg-blue-500 hover:bg-blue-800 text-white font-light py-1 px-2 rounded-full">
+                                        Small Functions
+                                    </button>
+                                </td>
+                                <td>34</td>
+                                <td>38</td>
+                                <td>
+                                    <span class="text-green-500"><i class="fas fa-arrow-up"></i>18%</span>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row">5</th>
+                                <td>
+                                    <button class="bg-blue-500 hover:bg-blue-800 text-white font-light py-1 px-2 rounded-full">
+                                        Corporate Events
+                                    </button>
+                                </td>
+                                <td>20</td>
+                                <td>28</td>
+                                <td>
+                                    <span class="text-green-500"><i class="fas fa-arrow-up"></i>28%</span>
+                                </td>
+                            </tr>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- /card -->
+
+        </div>
+        <!-- /Cards Section Ends Here -->
+        <!-- Progress Bar -->
+        <div class="progressb">
+            <div class="flex flex-1 flex-col md:flex-row lg:flex-row mx-2 mt-2">
+                <div class="rounded overflow-hidden shadow bg-white mx-2 w-full pt-2" style="height:150px;">
+                    <div class="px-6 py-2 border-b border-light-grey">
+                        <div class="font-bold text-2xl">Progress Among Projects</div>
+                    </div>
+                    <div class="progre">
+                        <div class="w-full">
+
+                            <div class="shadow w-full bg-grey-light" style="height:20px; margin-bottom:10px;">
+                                <div class="bg-blue-500 text-2xl leading-none py-1 text-center text-white"
+                                     style="width: 45%; height:20px;">
+                                    45%
+                                </div>
+                            </div>
+
+
+                            <div class="shadow w-full bg-grey-light mt-2" style="height: 15px; margin-bottom: 10px;">
+                                <div class="bg-teal-500 text-2xl leading-none py-1 text-center text-white"
+                                     style="width: 55%; height:20px;">
+                                    55%
+                                </div>
+                            </div>
+
+
+                            <div class="shadow w-full bg-grey-light mt-2" style="height: 20px; margin-bottom: 10px;">
+                                <div class="bg-orange-500 text-2xl leading-none py-1 text-center text-white"
+                                     style="width: 65%; height:20px">
+                                    65%
+                                </div>
+                            </div>
+
+
+                            <div class="shadow w-full bg-grey-light mt-2" style="height: 20px; margin-bottom: 10px;">
+                                <div class="bg-red-800 text-2xl leading-none py-1 text-center text-white"
+                                     style="width: 75%; height:20px">
+                                    75%
+                                </div>
+                            </div>
+                        </div>
+                        <div class="px-6 py-2 border-0 border-light-grey" style="height: 20px; margin-bottom: 10px;">
+                            <div class="font-bold text-xl"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Profile Tabs-->
+        <div style="margin-bottom:30px;">
+            <h2 style="text-align:center; font-size:30px; color:black; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">Top Vendors</h2>
+        </div>
+        <div class="flex flex-1 flex-col md:flex-row lg:flex-row mx-2 p-1 mt-2 mx-auto lg:mx-2 md:mx-2 justify-between" style="margin-top: 30px;">
+
+            <!--Top user 1-->
+            <div class="rounded rounded-t-lg overflow-hidden shadow max-w-xs my-3" style="margin-right:50px; ">
+                <img src="https://i.imgur.com/w1Bdydo.jpg" alt="" class="w-full" />
+                <div class="flex justify-center -mt-8">
+                    <img src="~/images/dj.jpg" alt=""
+                         class="rounded-full border-solid border-white border-2 -mt-3">
+                </div>
+                <div class="text-center px-3 pb-6 pt-2">
+                    <h3 class="text-black text-xl bold font-sans">Saya Music</h3>
+                    <p class="mt-2 font-sans font-light text-grey-700">
+                       Orchestera and DJ 
+                    </p>
+                </div>
+                <div class="flex justify-center pb-3 text-grey-dark">
+                    <div class="text-center mr-3 border-r pr-3">
+                        <h2>18</h2>
+                        <span>Bookings</span>
+                    </div>
+                    
+                </div>
+            </div>
+            <!--Top user 2-->
+            <div class="rounded rounded-t-lg overflow-hidden shadow max-w-xs my-3" style="margin-right:50px; ">
+                <img src="https://i.imgur.com/w1Bdydo.jpg" alt="" class="w-full" />
+                <div class="flex justify-center -mt-8">
+                    <img src="https://i.imgur.com/8Km9tLL.jpg" alt=""
+                         class="rounded-full border-solid border-white border-2 -mt-3">
+                </div>
+                <div class="text-center px-3 pb-6 pt-2">
+                    <h3 class="text-black text-xl bold font-sans">Emilie Decors</h3>
+                    <p class="mt-2 font-sans font-light text-grey-dark">
+                        Hotel Venues and Decors
+                    </p>
+                </div>
+                <div class="flex justify-center pb-3 text-grey-dark">
+                    <div class="text-center mr-3 border-r pr-3">
+                        <h2>25</h2>
+                        <span>Bookings</span>
+                    </div>
+                   
+                </div>
+            </div>
+            <!--Top user 3-->
+            <div class="rounded rounded-t-lg overflow-hidden shadow max-w-xs my-3" style="height:300px;">
+                <img src="https://i.imgur.com/w1Bdydo.jpg" alt="" class="w-full" />
+                <div class="flex justify-center -mt-8">
+                    <img src="~/images/param.jpg" alt=""
+                         class="rounded-full border-solid border-white border-2 -mt-3">
+                </div>
+                <div class="text-center px-3 pb-6 pt-2">
+                    <h3 class="text-black text-xl bold font-sans">Param Foods</h3>
+                    <p class="mt-2 font-sans font-light text-grey-dark">
+                        Wedding Cateres
+                    </p>
+                </div>
+                <div class="flex justify-center pb-3 text-grey-dark">
+                    <div class="text-center mr-3 border-r pr-3">
+                        <h2>14</h2>
+                        <span>bookings</span>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+        <!--/Profile Tabs-->
+    </div>
+</main>
+<!--/Main-->
+<script src="~/dist/main.js"></script>
+        
